<resources>
    <string name="app_name">油管家</string>
    <string name="global_save">保存</string>
    <string name="global_tip">提示</string>
    <string name="global_month">月</string>
    <string name="global_sure">确定</string>
    <string name="global_desc">说明：</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search">搜索</string>
    <string name="load_error">加载失败,点击重试</string>
    <string name="crop__saving">正在保存…</string>
    <string name="crop__wait">请等待…</string>
    <string name="crop__pick_error">没有可用的图片</string>
    <string name="crop__done">完成</string>
    <string name="crop__cancel">取消</string>
    <string name="Login">登录</string>
    <string name="edt_phone">请输入手机号码</string>
    <string name="edt_password">请输入密码</string>
    <string name="again_password">请再次输入密码</string>
    <string name="forget_password">忘记密码?</string>
    <string name="title_registered">注册</string>
    <string name="annotation_grey">我已同意并阅读</string>
    <string name="annotation_blue">用户协议</string>
    <string name="attention_oil">关注油品</string>
    <string name="title_password">忘记密码</string>
    <string name="phone">手机号</string>
    <string name="verification_code">验证码</string>
    <string name="edt_verification">请输入验证码</string>
    <string name="obtain_verification">获取验证码</string>
    <string name="Next">下一步</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="edt_new_password">请输入新密码</string>
    <string name="again_new_password">再次输入新密码</string>
    <string name="confirm">确定</string>
    <string name="registration_agreement">注册协议</string>
    <string name="password">密码</string>
    <string name="Software_share">软件分享</string>
    <string name="Registered_successfully">恭喜您，注册成功</string>
    <string name="welcome">欢迎加入油管家大家庭！</string>
    <string name="annotation">注册有礼，送您 %1$s 积分。现在邀请小伙伴加入，即可再获得 %2$s 积分。</string>
    <string name="invitation">邀请小伙伴加入</string>
    <string name="immediately">立刻送</string>
    <string name="integral">积分:</string>
    <string name="integral_tar">积分</string>
    <string name="annotation_explain"> 积分可用于摇奖，随机获得不同金额的红包、消费券、积分等。</string>
    <string name="invitation_button">邀请小伙伴</string>
    <string name="s_product_selection">选择油品</string>
    <string name="s_function_introduction">业务功能介绍</string>
    <string name="s_pre_orders_for_sure">预购吨数确定</string>
    <string name="s_bow_orders_for_sure">借用吨数确定</string>
    <string name="s_increasing_min">递增最小量</string>
    <string name="s_pre_procedure_rates">预购手续费率</string>
    <string name="s_pre_price">预购金额：%1$s元</string>
    <string name="s_guarantee_price">担保金额：%1$s元</string>
    <string name="s_order_payment_success">订单支付成功</string>
    <string name="s_pre_oil_type">预购油品 %1$s#</string>
    <string name="s_bow_oil_type">预借油品 %1$s#</string>
    <string name="s_pre_oil_charge">价格 %1$s元</string>
    <string name="s_borrow_price">担保金额：%1$s元</string>
    <string name="s_bow_oil">油品 %1$s#</string>
    <string name="s_pre_oil_percharge">单价 %1$s元</string>
    <string name="mine_avatar_upload">上传头像</string>
    <string name="mine_name">姓名</string>
    <string name="mine_name_hint">请输入姓名</string>
    <string name="mine_gender">性别</string>
    <string name="mine_gender_man">男</string>
    <string name="mine_gender_woman">女</string>
    <string name="mine_phone">手机号</string>
    <string name="mine_phone_hint">请输入手机号</string>
    <string name="mine_id_card">身份证号</string>
    <string name="mine_id_card_hint">请输入身份证号</string>
    <string name="mine_driver">驾驶证号</string>
    <string name="mine_driver_hint">请输入驾驶证号</string>
    <string name="mine_attention">关注油品</string>
    <string name="mine_attention_hint">添加关注</string>
    <string name="mine_vehicle_info">车辆信息</string>
    <string name="mine_vehicle_hint">添加爱车</string>
    <string name="mine_vehicle_edit_hint">编辑爱车</string>
    <string name="mine_vehicle_add_label">添加新车辆信息</string>
    <string name="mine_person_info">个人信息</string>
    <string name="mine_vehicle_list">车辆列表</string>
    <string name="mine_oil_select">选择油品</string>
    <string name="mine_vehicle_code">车牌号</string>
    <string name="mine_vehicle_code_hint">请输入车牌号</string>
    <string name="mine_vehicle_type">车辆品牌/型号</string>
    <string name="mine_vehicle_type_hint">请选择车辆品牌/型号</string>
    <string name="mine_vehicle_oil">加注油品</string>
    <string name="mine_vehicle_oil_hint">请选择加注油品</string>
    <string name="mine_vehicle_buy_time">购买年月</string>
    <string name="mine_vehicle_buy_time_hint">请输入购买年月</string>
    <string name="mine_vehicle_safe_endtime">到期保险日期</string>
    <string name="mine_vehicle_safe_endtime_hint">请输入到期保险日期</string>
    <string name="mine_vehicle_price">新车价格</string>
    <string name="mine_vehicle_price_hint">请输入新车价格</string>
    <string name="mine_vehicle_safe_company">保险公司</string>
    <string name="mine_vehicle_safe_company_hint">请输入保险公司</string>
    <string name="mine_vehicle_last_six">车架后6位</string>
    <string name="mine_vehicle_last_six_hint">请输入车架后6位</string>
    <string name="mine_vehicle_register_addr">车辆注册地</string>
    <string name="mine_vehicle_register_addr_hint">请输入车辆注册地</string>
    <string name="mine_vehicle_liter">汽车排量</string>
    <string name="mine_vehicle_liter_hint">请输入汽车排量</string>
    <string name="mine_vehicle_info_code">车牌号：</string>
    <string name="mine_vehicle_info_type">车辆品牌/型号：</string>
    <string name="mine_vehicle_info_specifications">规格型号：</string>
    <string name="mine_vehicle_info_oil">加注油品：</string>
    <string name="mine_vehicle_info_buy_time">购买年月：</string>
    <string name="mine_vehicle_info_safe_endtime">到期保险日期：</string>
    <string name="mine_vehicle_info_price">新车价格：</string>
    <string name="mine_vehicle_info_safe_company">保险公司：</string>
    <string name="mine_vehicle_info_last_six">车架后6位：</string>
    <string name="mine_vehicle_info_register_addr">车辆注册：</string>
    <string name="mine_vehicle_info_liter">汽车排量：</string>
    <string-array name="mine_gas_wallet_title">
        <item>时间</item>
        <item>类别</item>
        <item>金额</item>
    </string-array>
    <string name="s_gas_hint">信息输入不正确，绑定不成功</string>
    <string name="mine_pre_title">预购油</string>
    <string-array name="oil_liter">
        <item>1.0L以下</item>
        <item>1.0L-1.1L</item>
        <item>1.3L</item>
        <item>1.4L-1.5L</item>
        <item>1.6L</item>
        <item>1.7L</item>
        <item>1.8L</item>
        <item>2.0L</item>
        <item>2.1L-2.4L</item>
        <item>2.5L-3.0L</item>
        <item>3.0L-3.5L</item>
        <item>3.5L-4.0L</item>
        <item>4.0L以上</item>
    </string-array>
    <string name="mine_pre_gas">油品</string>
    <string name="mine_pre_gas_tip_info">若需要转入油钱包或退货，请点击对应预购油品记录！</string>
    <string name="mine_pre_gas_type">预购油品：</string>
    <string name="mine_pre_gas_unit_price">单价：</string>
    <string name="mine_pre_gas_left_volume">预购余量：</string>
    <string name="mine_pre_gas_cur_amount">当前金额：</string>
    <string name="mine_pre_gas_storage">代储费：</string>
    <string name="mine_pre_gas_pre_unit_price">预购单价：</string>
    <string name="mine_pre_gas_pre_amount">预购金额：</string>
    <string name="mine_pre_gas_fee">已付手续费：</string>
    <string name="mine_pre_gas_statistics">当前盈亏：</string>
    <string name="mine_pre_gas_title_time">时间</string>
    <string name="mine_pre_gas_title_type">类别</string>
    <string name="mine_pre_gas_title_volume">吨</string>
    <string name="mine_pre_gas_title_yuan">元</string>
    <string name="mine_pre_gas_transfer">转入油钱包</string>
    <string name="mine_pre_gas_order_back">退货</string>
    <string name="mine_pre_auto_transfer">资金将自动转入零钱包内。</string>
    <string name="mine_pre_transfer_gas">预购油品</string>
    <string name="mine_pre_transfer_left">预购余量</string>
    <string name="mine_pre_transfer_fee">代储费</string>
    <string name="mine_pre_transfer_statistics">当前盈亏</string>
    <string name="mine_pre_transfer_volume">吨数</string>
    <string name="mine_pre_transfer_amount">转出金额</string>
    <string name="mine_pre_transfer_hint">请输入转出的吨数</string>
    <string name="mine_pre_transfer_btn">确认转入油钱包</string>
    <string name="mine_pre_transfer_success">转入油钱包成功</string>
    <string name="mine_pre_transfer_cur_unit_price">当前单价：</string>
    <string name="mine_pre_transfer_pre_unit_price">预购单价：</string>
    <string name="mine_pre_transfer_pre_storage_fee">代储费：</string>
    <string name="mine_pre_transfer_out_volume">转出吨数：</string>
    <string name="mine_pre_transfer_out_amount">转出金额：</string>
    <string name="mine_pre_transfer_out_amount_real">实际转出金额：</string>
    <string name="mine_pre_transfer_left_volume">剩余预购吨数：</string>
    <string name="mine_pre_transfer_left_amount">转入油钱包后余额：</string>
    <string name="mine_pre_return_rate">退货手续费率</string>
    <string name="mine_pre_return_fee">退货手续费：</string>
    <string name="mine_pre_return_real_amount">退货实际金额：</string>
    <string name="mine_pre_return_count">退货数量</string>
    <string name="mine_pre_return_hint">请输入退货吨数</string>
    <string name="mine_pre_return_desc">资金将自动转入零钱包内。</string>
    <string name="mine_pre_return">退货</string>
    <string name="mine_pre_return_success">退货成功</string>
    <string name="mine_pre_return_volume">退货吨数：</string>
    <string name="mine_pre_return_amount">退货金额：</string>
    <string name="mine_pre_return_amount_real">实际退货金额：</string>
    <string name="mine_borrow_gas_title">借用油</string>
    <string name="mine_borrow_gas_item_tip">若需要转入油钱包或归还，请点击对应借用油品记录！</string>
    <string name="mine_borrow_gas_btn_return">归还</string>
    <string name="mine_borrow_gas_guarantee">担保金：</string>
    <string name="mine_borrow_gas_borrow_fee">借用费：</string>
    <string name="mine_borrow_gas_borrow_type">借用油品：</string>
    <string name="mine_borrow_gas_borrow_left">借用余量：</string>
    <string name="mine_borrow_gas_detail_title">预借油详情</string>
    <string name="borrow_gas_detail_title">借用油详情</string>
    <string name="mine_borrow_gas_type">借用油品</string>
    <string name="mine_borrow_gas_left">借用余量</string>
    <string name="mine_borrow_gas_price">当前价钱</string>
    <string name="mine_borrow_gas_unit_price">借用单价</string>
    <string name="mine_borrow_gas_unit_price_">借用单价：</string>
    <string name="mine_borrow_gas_unit_money">借用费：</string>
    <string name="mine_borrow_gas_guarantee_">担保金额</string>
    <string name="mine_borrow_gas_borrow_fee_">借用费</string>
    <string name="mine_borrow_gas_borrow_rate">归还手续费率</string>
    <string name="mine_borrow_gas_borrow_volume">归还吨数</string>
    <string name="mine_borrow_gas_borrow_volume_">归还吨数：</string>
    <string name="mine_borrow_gas_borrow_volume_hint">请输入归还吨数</string>
    <string name="mine_borrow_gas_borrow_return_fee_">归还手续费</string>
    <string name="mine_borrow_gas_borrow_return_amount_">归还金额</string>
    <string name="mine_borrow_gas_borrow_return_amount">归还金额：</string>
    <string name="mine_borrow_gas_borrow_return_amount_real">实际归还金额：</string>
    <string name="mine_borrow_gas_borrow_litre">剩余借用吨数：</string>
    <string name="mine_borrow_gas_borrow_return_left">零钱包余额：</string>
    <string name="mine_bonus_valid">未用</string>
    <string name="mine_bonus_used">已用</string>
    <string name="mine_bonus_invalid">无效</string>
    <string name="mine_oilwallet_amount">金额</string>
    <string name="mine_oilwallet_amount_in">请输入转入金额</string>
    <string name="mine_oilwallet_card">转入的油卡</string>
    <string name="mine_oilwallet_transfer_desc_label">说明：</string>
    <string name="mine_oilwallet_transfer_desc">1. 转入金额不能超过第三方结算公司规定的每日最大转出金额。</string>
    <string name="mine_oilwallet_transfer_in">确认转入</string>
    <string name="mode_payment">选择支付方式</string>
    <string name="Pay_treasure">支付宝</string>
    <string name="WeChat">微信</string>
    <string name="Internet_bank">网银</string>
    <string name="balance">余额</string>
    <string name="hint_price">请输入金额</string>
    <string name="test_confirm_price">确认转入金额： %1$s 元</string>
</resources>