<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_middle"
        android:background="@drawable/forgot_password_bg"
        android:gravity="center_vertical">

        <TextView
            style="@style/title_template"
            android:layout_marginLeft="@dimen/common_padding_middle"
            android:text="@string/phone"/>
        
        <EditText
            android:id="@+id/phone"
            style="@style/EditText_hint"
            android:hint="@string/edt_phone"
            android:phoneNumber="true"
            android:inputType="number"
            android:layout_marginLeft="@dimen/hint_left"
            android:maxLength="11"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/forgot_password_bg"
        android:layout_marginTop="@dimen/common_padding_middle">

        <TextView
            style="@style/title_template"
            android:layout_marginLeft="@dimen/common_padding_middle"
            android:text="@string/verification_code"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/edt_verification"
            style="@style/EditText_hint"
            android:hint="@string/edt_verification"
            android:phoneNumber="true"
            android:inputType="number"
            android:layout_marginLeft="@dimen/hint_left"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/validationCode"
            style="@style/border_button_V"
            android:text="@string/obtain_verification"
            android:layout_marginRight="@dimen/common_padding_middle"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <Button
        android:id="@+id/next_button"
        android:layout_marginTop="@dimen/common_padding_big"
        style="@style/ButtonBlue"
        android:text="@string/Next"
        android:layout_marginLeft="@dimen/common_padding_middle"
        android:layout_marginRight="@dimen/common_padding_middle"/>

</LinearLayout>