<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_bg">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_middle"
        android:background="@drawable/forgot_password_bg"
        android:gravity="center_vertical">

        <TextView
            style="@style/title_template"
            android:layout_marginLeft="@dimen/common_padding_middle"
            android:text="@string/new_password"/>

        <EditText
            android:id="@+id/new_password"
            style="@style/EditText_hint"
            android:hint="@string/edt_new_password"
            android:password="true"
            android:layout_marginLeft="@dimen/hint_left"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_middle"
        android:background="@drawable/forgot_password_bg"
        android:gravity="center_vertical">

        <TextView
            style="@style/title_template"
            android:layout_marginLeft="@dimen/common_padding_middle"
            android:text="@string/confirm_password"/>

        <EditText
            android:id="@+id/again_new_password"
            style="@style/EditText_hint"
            android:hint="@string/again_new_password"
            android:password="true"
            android:layout_marginLeft="@dimen/hint_left"/>

    </RelativeLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_marginTop="@dimen/common_padding_big"
        style="@style/ButtonBlue"
        android:text="@string/confirm"
        android:layout_marginLeft="@dimen/common_padding_middle"
        android:layout_marginRight="@dimen/common_padding_middle"/>


</LinearLayout>