<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/common_margin"
        >
        <RadioButton
            android:id="@+id/radio_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radio_btn_left"
            android:checked="true"
            android:text="@string/mine_bonus_valid"
            />
        <RadioButton
            android:id="@+id/radio_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radio_btn_middle"
            android:text="@string/mine_bonus_used"

            />
        <RadioButton
            android:id="@+id/radio_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/radio_btn_right"
            android:text="@string/mine_bonus_invalid"
            />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/common_margin"
        >
    </FrameLayout>
</LinearLayout>