<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/common_bg"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/list_item"
        android:paddingBottom="@dimen/common_margin_big">

        <ImageView
            android:id="@+id/label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_marginTop="@dimen/common_margin_big"
            android:background="@drawable/time_icon" />

        <TextView
            android:id="@+id/time"
            style="@style/common_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/label"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_toRightOf="@id/label"
            android:text="2015-01-12 13:20:10" />


        <TextView
            android:id="@+id/balance_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/time"
            android:layout_below="@id/time"
            android:layout_marginTop="@dimen/common_margin"
            android:text="@string/balance"
            android:textColor="@color/black"
            android:textSize="@dimen/common_blue_border_28px" />

        <TextView
            android:id="@+id/balance_val"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/balance_label"
            android:layout_below="@id/time"
            android:layout_marginLeft="@dimen/common_margin_big"
            android:layout_toRightOf="@id/balance_label"
            android:text="5000.00"
            android:textColor="@color/common_red"
            android:textSize="@dimen/common_blue_border_28px" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/amount_sel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_vehicle_edit_item_h"
        android:layout_marginTop="@dimen/common_margin"
        android:background="@drawable/list_item">

        <TextView
            android:id="@+id/amount_label"
            style="@style/common_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_margin"
            android:text="@string/mine_oilwallet_amount" />


        <EditText
            android:id="@+id/amount_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_toRightOf="@id/amount_label"
            android:background="@null"
            android:hint="@string/mine_oilwallet_amount_in"
            android:textSize="@dimen/common_blue_border_28px"
            android:textColor="@color/common_black"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:phoneNumber="true"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/card_sel"
        android:layout_width="match_parent"
        android:layout_height="@dimen/mine_vehicle_edit_item_h"
        android:layout_marginTop="@dimen/common_margin"
        android:background="@drawable/list_item">

        <TextView
            android:id="@+id/card_label"
            style="@style/common_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_margin"
            android:text="@string/mine_oilwallet_card" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/common_margin"
            android:src="@drawable/arrow_gray_right" />

        <TextView
            android:id="@+id/card_val"
            style="@style/common_text"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_toRightOf="@id/card_label"
            android:textColor="@color/common_blue"
            android:text="石油卡" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/desc_label"
            style="@style/common_text"
            android:textColor="@color/common_red"
            android:text="@string/mine_oilwallet_transfer_desc_label"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_marginTop="@dimen/common_margin"
            />

        <TextView
            android:id="@+id/desc"
            style="@style/common_text"
            android:text="@string/mine_oilwallet_transfer_desc"
            android:layout_below="@id/desc_label"
            android:textColor="@color/common_gray"
            android:singleLine="false"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_marginTop="@dimen/common_padding_small"
            android:gravity="left"
            android:textSize="@dimen/common_hint_26px"/>
        <TextView
            style="@style/common_text"
            android:text="2. 仅支持浙江省内中石化油卡。"
            android:layout_marginRight="@dimen/common_margin"
            android:textColor="@color/common_gray"
            android:singleLine="false"
            android:layout_marginLeft="@dimen/common_margin"
            android:gravity="left"
            android:layout_below="@id/desc"
            android:textSize="@dimen/common_hint_26px"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/common_bg"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue"
            android:text="@string/mine_oilwallet_transfer_in"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginTop="@dimen/common_margin_big"
            android:textColor="@color/white"
            android:gravity="center"
            />

    </LinearLayout>


</LinearLayout>